tests/algorithms/x/Scala/sorts/tim_sort.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/sorts/tim_sort.scala:99: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[scala.math.BigInt]
Note: Any >: scala.math.BigInt, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: scala.math.BigInt`. (SLS 3.2.10)
      current = current :+ ((xs.lift((i.toInt).toInt).getOrElse(BigInt(0))).asInstanceOf[Any])
                        ^
one error found
